--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Sejoon Oh"
-  avatar           : "lantaoyu.jpg"
+  avatar           : "5x5_sejoonoh.jpg"
   bio              : "PhD student, Carnegie Mellon University"
   location         : "Pittsburgh, PA"
   employer         : 
