--- a/_config.yml
+++ b/_config.yml
@@ -89,14 +89,14 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : 
+  facebook         : "https://www.facebook.com/oh.sejoon.1"
   foursquare       :
   github           : "sejoonoh"
   google_plus      :
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/sejoon-oh/"
   orcid            : 
   pinterest        :
   soundcloud       :
