--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,8 @@ analytics:
 # Site Author
 author:
   name             : "Sejoon Oh"
-  avatar           : "5x5_sejoonoh.jpg"
-  bio              : "PhD student, Carnegie Mellon University"
+  avatar           : "SejoonOh_Head_to_Shoulder.jpg"
+  bio              : "PhD student, Computational Biology Department, Carnegie Mellon University"
   location         : "Pittsburgh, PA"
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=Ixg9n-EAAAAJ&hl=en"
