--- a/_config.yml
+++ b/_config.yml
@@ -82,21 +82,21 @@ author:
   bio              : "PhD student, Computational Biology Department, Carnegie Mellon University"
   location         : "Pittsburgh, PA"
   employer         : 
-  googlescholar    : "https://scholar.google.com/citations?user=Ixg9n-EAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.co.kr/citations?user=q_6hq64AAAAJ&hl=en"
   email            : "sejun6431@gmail.com"
   uri              : 
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/oh.sejoon.1"
+  facebook         : "oh.sejoon.1"
   foursquare       :
   github           : "sejoonoh"
   google_plus      :
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/sejoon-oh/"
+  linkedin         : "sejoon-oh"
   orcid            : 
   pinterest        :
   soundcloud       :
