--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   # - title: "Awards & Honors"
   #   url: /awards/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research Projects"
+    url: /talk/    
 
   # - title: "Teaching"
   #   url: /teaching/    
@@ -18,8 +18,8 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  - title: "Blogs"
-    url: /year-archive/
+ # - title: "Blogs"
+  #  url: /year-archive/
     
   - title: "Contact"
     url: /contact/  
