--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
   #   url: /awards/
 
   - title: "Research Projects"
-    url: /talk/    
+    url: /talks/    
 
   # - title: "Teaching"
   #   url: /teaching/    
