--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Sejoon Oh"
   avatar           : "SejoonOh_Head_to_Shoulder.jpg"
-  bio              : "PhD student, School of Computational Science and Engineering , Georgia Institute of Technology"
+  bio              : "PhD student in Computer Science, Georgia Institute of Technology"
   location         : "Atlanta, GA"
   employer         : 
   googlescholar    : "https://scholar.google.co.kr/citations?user=q_6hq64AAAAJ&hl=en"
