--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Sejoon Oh"
-  avatar           : "Sejoon_Oh.jpg"
+  avatar           : "Sejoon_Oh (2).jpg"
   bio              : "PhD student in Computer Science, Georgia Institute of Technology"
   location         : "Atlanta, GA"
   employer         : 
