--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "oh.sejoon.1"
+  facebook         :
   foursquare       :
   github           : "sejoonoh"
   google_plus      :
