--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,8 @@ analytics:
 # Site Author
 author:
   name             : "Sejoon Oh"
-  avatar           : "KakaoTalk_20220729_125945145.jpg"
-  bio              : "PhD student in Computer Science, Georgia Institute of Technology"
+  avatar           : "KakaoTalk_20230830_142225145.jpg"
+  bio              : "PhD Candidate in Computer Science, Georgia Institute of Technology"
   location         : "Atlanta, GA"
   employer         : 
   googlescholar    : "https://scholar.google.co.kr/citations?user=q_6hq64AAAAJ&hl=en"
