--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sejoon Oh"
 title_separator          : "-"
 name                     : &name "Sejoon Oh"
-description              : &description "PhD Candidate, Georgia Institute of Technology"
+description              : &description "Incoming Research Scientist, Netflix"
 url                      : https://sejoonoh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sejoonoh/sejoonoh.github.io"
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Sejoon Oh"
   avatar           : "KakaoTalk_20230830_142225145.jpg"
-  bio              : "PhD Candidate in Computer Science, Georgia Institute of Technology"
+  bio              : "Incoming Research Scientist, Netflix"
   location         : "Atlanta, GA"
   employer         : 
   googlescholar    : "https://scholar.google.co.kr/citations?user=q_6hq64AAAAJ&hl=en"
