--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sejoon Oh"
 title_separator          : "-"
 name                     : &name "Sejoon Oh"
-description              : &description "Research Scientist, Netflix"
+description              : &description "GenAI/ML Research Scientist, Netflix"
 url                      : https://sejoonoh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sejoonoh/sejoonoh.github.io"
